--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bulma": "^0.9.2",
+    "clsx": "^1.1.1",
+    "firebase": "^8.6.2",
+    "history": "^4.10.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.34.0",
     "web-vitals": "^1.1.2"
   },
