--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bulma": "^0.9.2",
+    "bulma-o-steps": "^1.1.0",
     "chart.js": "^3.3.0",
     "clsx": "^1.1.1",
     "firebase": "^8.6.2",
