--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.12.1",
+    "@creativebulma/bulma-divider": "^1.1.0",
+    "@creativebulma/bulma-tagsinput": "^1.0.3",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -17,13 +20,20 @@
     "clsx": "^1.1.1",
     "firebase": "^8.6.2",
     "history": "^4.10.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^3.0.3",
-    "react-dom": "^17.0.2",
+    "react-dates": "^21.8.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-with-direction": "^1.3.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.34.0",
