--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "bulma-o-steps": "^1.1.0",
     "chart.js": "^3.3.0",
@@ -29,6 +30,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
+    "react-google-places-autocomplete": "^3.3.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
