--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.1",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
+    "bulma-calendar": "^6.1.5",
     "bulma-o-steps": "^1.1.0",
     "chart.js": "^3.3.0",
     "clsx": "^1.1.1",
