--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^3.0.3",
     "react-dates": "^21.8.0",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^16.14.0",
     "react-google-places-autocomplete": "^3.3.1",
     "react-redux": "^7.2.4",
